# Umbrello-rs

./: .gitignore  AGENTS.md  Cargo.toml  deny.toml  opencode.jsonc  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.opencode/agents/: architect.md  implementer.md  reviewer.md
analysis/: build_system_analysis.md  code_generation_analysis.md  code_import_analysis.md  dependency_map.md  diagram_engine_analysis.md  persistence_analysis.md  subsystem_inventory.md  ui_analysis.md  uml_model_analysis.md
apps/umbrello/: Cargo.toml
apps/umbrello-desktop/: Cargo.toml
apps/umbrello-desktop/src/: main.rs
apps/umbrello/src/: app.rs  canvas.rs  file_io.rs  main.rs  menu.rs  property_editor.rs  rendering.rs  tests.rs  tool_palette.rs  tree.rs
apps/uml-cli/: Cargo.toml
apps/uml-cli/src/: main.rs
crates/uml-codegen/: Cargo.toml
crates/uml-codegen-cpp/: Cargo.toml
crates/uml-codegen-cpp/src/: lib.rs
crates/uml-codegen-java/: Cargo.toml
crates/uml-codegen-java/src/: lib.rs
crates/uml-codegen-python/: Cargo.toml
crates/uml-codegen-python/src/: lib.rs
crates/uml-codegen-rust/: Cargo.toml
crates/uml-codegen-rust/src/: lib.rs
crates/uml-codegen/src/: cpp.rs  java.rs  lib.rs  python.rs  registry.rs  rust.rs  writer.rs
crates/uml-common/: Cargo.toml
crates/uml-common/src/: error.rs  lib.rs
crates/uml-core/: Cargo.toml
crates/uml-core/src/: elements.rs  event.rs  id.rs  lib.rs  model.rs  repository.rs  types.rs
crates/uml-core/src/common/: mod.rs  version.rs
crates/uml-core/src/diagram/: edge.rs  geometry.rs  mod.rs  node.rs  types.rs
crates/uml-core/src/layout/: mod.rs
crates/uml-core/src/render/: mod.rs
crates/uml-core/src/undo/: commands.rs  mod.rs
crates/uml-core/src/xmi/: mod.rs  writer.rs
crates/uml-core/tests/: id_tests.rs  serde_roundtrip.rs  test_diagram_geometry.rs  test_history.rs
crates/uml-diagram/: Cargo.toml
crates/uml-diagram/src/: lib.rs
crates/uml-export/: Cargo.toml
crates/uml-export/src/: lib.rs
crates/uml-import/: Cargo.toml
crates/uml-import-cpp/: Cargo.toml
crates/uml-import-cpp/src/: lib.rs
crates/uml-import-java/: Cargo.toml
crates/uml-import-java/src/: lib.rs
crates/uml-import-python/: Cargo.toml
crates/uml-import-python/src/: lib.rs
crates/uml-import/src/: lib.rs  registry.rs
crates/uml-io/: Cargo.toml
crates/uml-io/src/: lib.rs  storage.rs
crates/uml-io/src/xmi/: error.rs  mod.rs  reader.rs  writer.rs
crates/uml-io/tests/: test_real_corpus.rs
crates/uml-layout/: Cargo.toml
crates/uml-layout/src/: lib.rs
crates/uml-persistence/: Cargo.toml
crates/uml-persistence/src/: lib.rs  storage.rs
crates/uml-render/: Cargo.toml
crates/uml-render/src/: lib.rs
crates/uml-undo/: Cargo.toml
crates/uml-undo/src/: lib.rs
crates/uml-xmi/: Cargo.toml
crates/uml-xmi/src/: lib.rs  reader.rs
docs/: SUMMARY.md  association_purging_v1.md  command_architecture_v1.md  crate_boundary_review.md  diagram_geometry_architecture_v1.md  domain_model_review.md  domain_model_v1.md  milestone15_review.md  milestone7_review.md  milestone8_review.md  milestone_16_complete.md  model_repository_review.md  model_repository_v1.md  phase1_architecture_audit.md  relationships_review.md  relationships_v1.md  structural_features_review.md  structural_features_v1.md  testing_strategy.md  ui_architecture_evaluation_v1.md  ui_rich_rendering_spec_v1.md  workspace_consolidation_v2.md  xmi_milestone9_strategy.md  xmi_persistence_architecture_v1.md  xmi_writer_strategy_v1.md
docs/book/: book.toml
docs/designs/: milestone_16.md  milestone_17.md  milestone_18.md  milestone_19.md  milestone_20.md
docs/implementations/: milestone_16_done.md  milestone_17_done.md  milestone_18_done.md  milestone_19_phase1_done.md  milestone_19_phase2_done.md  milestone_19_phase3_done.md  milestone_20_phase1_done.md  milestone_20_phase2_done.md  milestone_20_phase3_done.md
docs/reviews/: milestone_16_approved.md  milestone_17_approved.md  milestone_18_approved.md  milestone_19_approved.md  milestone_19_phase1_approved.md  milestone_20_approved.md
planning/: crate_layout.md  implementation_phases.md  migration_strategy.md  phase1_execution_plan.md  risk_assessment.md
research/: architecture_patterns.md  rust_ecosystem_candidates.md
xtask/: Cargo.toml
xtask/src/: main.rs
