[package]
name = "umbrello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Umbrello UML modeling tool"

[[bin]]
name = "umbrello"
path = "src/main.rs"

[dependencies]
uml-core = { path = "../../crates/uml-core" }
uml-io = { path = "../../crates/uml-io" }
eframe = "0.31"
egui = "0.31"
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
