[package]
name = "uml-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Umbrello command-line interface"

[[bin]]
name = "umbrello"
path = "src/main.rs"

[dependencies]
uml-persistence = { path = "../../crates/uml-persistence" }
uml-common = { path = "../../crates/uml-common" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
