[package]
name = "uml-codegen-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Java code generator for Umbrello-RS"

[dependencies]
uml-codegen = { path = "../uml-codegen" }
uml-core = { path = "../uml-core" }
tracing.workspace = true
