[package]
name = "uml-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Code generation framework and language generators"

[dependencies]
uml-core = { path = "../uml-core" }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
cpp = []
java = []
python = []
rust = []
