[package]
name = "uml-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared utilities, error types, and version constants for Umbrello-RS"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
