[package]
name = "uml-diagram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Diagram model — widget data, scene composition, association routing"

[dependencies]
uml-core = { path = "../uml-core" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
