[package]
name = "uml-import-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C++ code import for Umbrello-RS (tree-sitter based)"

[dependencies]
uml-import = { path = "../uml-import" }
uml-core = { path = "../uml-core" }
tracing.workspace = true
