[package]
name = "uml-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Code import framework — traits, registry, shared parsing utilities"

[dependencies]
uml-core = { path = "../uml-core" }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
