[package]
name = "uml-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Persistence, import, and export for Umbrello-RS"

[dependencies]
uml-core = { path = "../uml-core" }
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.5", optional = true }
zip = { version = "2", optional = true }

[features]
default = ["compression"]
compression = ["flate2", "tar", "bzip2", "zip"]
