[package]
name = "uml-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "File I/O pipeline, format detection, compression, autosave"

[dependencies]
uml-core = { path = "../uml-core" }
uml-xmi = { path = "../uml-xmi" }
uml-common = { path = "../uml-common" }
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.5", optional = true }
zip = { version = "0.5", optional = true }

[features]
default = ["compression", "autosave"]
compression = ["flate2", "tar", "bzip2", "zip"]
autosave = []
